--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "request-promise": "3.0.0"
+    "limit-request-promise": "0.0.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
